siduxcc (0.12.1) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Fabian Wuertz ]
  * translation: de,fr&it updated
  * kde3: siduxcc: sidux-binary-gfx disabled

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 23 Jul 2008 02:34:44 +0200

siduxcc (0.12.0) unstable; urgency=low

  [ Fabian Wuertz ]
  * cmake 1/?: new folder created
  * camke 2/?: folder moved
  * cmake 3/?: folder moved
  * cmake 4/?: make files removed
  * cmake 5/?: cmake files added
  * cmake 6/?: translation updated
  * cmake 7/?: cmake files added
  * cmake 8/?: gtk icons updated
  * cmake 9/?: process problem solved
  * cmake 10/?: moc problem solved
  * cmake 11/?: hermes cmake files added
  * cmake 12/?: main.cpp problem solved
  * cmake 13/13: translation updated --> change to cmake done
  * hermesExec problem solved
  * all translations activated

  [ Stefan Lippers-Hollmann ]
  * switch stated build-dependency in debian/control from automake to cmake.
  * "interface" is just a script module, no need to shebang.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 13 Jul 2008 00:06:02 +0200

siduxcc (0.11.2) unstable; urgency=low

  * cli: hostname problem fixed
  * cli: hostname function updated

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 04 Jul 2008 21:34:51 +0200

siduxcc (0.11.1) unstable; urgency=low

  [ Fabian Wuertz ]
  * sidux-hermes-kde4 added
  * cli: addSources function updated
  * siduxcc_hermes to hermes_kde3 moved
  * hermes-kde4 to hermes_kde4 moved
  * hermes_gkt2 folder added
  * disconnected icon to icon folder moved
  * manpage added, not included in the debian yet 
  * another brick in the wall 
  * subdirs-file updated
  * debian/siduxcc.manpages added
  * kde->kde3

  [ Stefan Lippers-Hollmann ]
  * cupsys --> cups.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 25 Jun 2008 16:22:56 +0200

siduxcc (0.10.12) unstable; urgency=low

  * hermes-kde: exec problems solved

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 22 Jun 2008 02:48:27 +0200
