@@ -1,4 +1,15 @@
 install_files( /bin FILES siduxcc nicstatus )
-install_files( /share/siduxcc/scripts FILES scripts/rcconf.pl scripts/loadssft.sh  )
-install_files( /share/siduxcc/modules FILES modules/interface modules/display.bm modules/software.bm modules/info.bm modules/kernel.bm modules/services.bm modules/network.bm )
+install_files( /share/siduxcc/scripts FILES
+	scripts/rcconf.pl
+	scripts/loadssft.sh
+)
+install_files( /share/siduxcc/modules FILES 
+	modules/interface
+	modules/display.bm
+	modules/software.bm
+	modules/info.bm
+	modules/kernel.bm
+	modules/services.bm
+	modules/network.bm
+)
 
